scenarios/seven-seas/_solution/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mine
  namespace: south-atlantic
  labels:
    name: mine
spec:
  serviceAccountName: invader
  containers:
  - name: mine
    image: bitnami/kubectl:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
    command:
      - sleep
      - infinity
