scenarios/seven-seas/_solution/pss-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invader
  labels:
    app: invader
  namespace: south-pacific
spec:
  selector:
    matchLabels:
      app: invader
  replicas: 1
  template:
    metadata:
      labels:
        app: invader
    spec:
      serviceAccountName: port-finder
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: invader
          # Image must have ssh and kubectl pre-installed (Dockerfile included)
          image: ttl.sh/invader-sag34afsa-wakeward:12h
          command: [ "sleep", "2d" ]
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 2000
