scenarios/seven-seas/_solution/netpol-patch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blockade
  namespace: indian
spec:
  podSelector:
    matchLabels:
      ship: adventure-galley
  ingress:
    - { }
